--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - Where Ads meet Music</title>
     
-    <link rel="stylesheet" href="spotify2.css">
+    <link rel="stylesheet" href="app.css">
 
 
 </head>
@@ -66,7 +66,7 @@
     </div>
 
     <script src="https://kit.fontawesome.com/d8854d53d5.js" crossorigin="anonymous"></script>
-    <script src="spotify3.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
 
